k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gallery
  namespace: gallery
spec:
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: gallery
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gallery
  namespace: gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gallery
  template:
    metadata:
      labels:
        app: gallery
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: gallery
          image: ghcr.io/jihun-io/gallery:sha-67e9047
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: cache
              mountPath: /app/.next/cache

          resources:
            limits:
              memory: "1024Mi"
            requests:
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 40
            periodSeconds: 30
            timeoutSeconds: 10

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5

      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: gallery-cache
